footer should not be fixed on smaller screens

--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -353,13 +353,14 @@ footer {
   section, footer {
     float:none;
     width:auto;
+    position: relative;
   }
 
-	footer {
-		border-top: 1px solid #ccc;
-		margin:0 84px 0 50px;
-		padding:0;
-	}
+  footer {
+    border-top: 1px solid #ccc;
+    margin:0 84px 0 50px;
+    padding:0;
+  }
   
   header {
     width: auto;
